--- a/paper/stat572.bib
+++ b/paper/stat572.bib
@@ -1,4 +1,11 @@
 
+@inproceedings{Defazio2012,
+  title={A convex formulation for learning scale-free networks via submodular relaxation},
+  author={Defazio, Aaron and Caetano, Tiberio S},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={1250--1258},
+  year={2012}
+}
 
 @article{Yuan2007,
 author = {Yuan, Ming and Lin, Yi}, 
