adding methods to paper

--- a/paper/stat572.bib
+++ b/paper/stat572.bib
@@ -1,11 +1,4 @@
 
-@inproceedings{Defazio2012,
-  title={A convex formulation for learning scale-free networks via submodular relaxation},
-  author={Defazio, Aaron and Caetano, Tiberio S},
-  booktitle={Advances in Neural Information Processing Systems},
-  pages={1250--1258},
-  year={2012}
-}
 
 @article{Yuan2007,
 author = {Yuan, Ming and Lin, Yi}, 
@@ -140,7 +133,7 @@ year = "2011"
     doi = {10.1371/journal.pone.0013580}
 }
 
-@incollection{NIPS2010_3933,
+@incollection{bach2010,
 title = {Structured sparsity-inducing norms through submodular functions},
 author = {Francis R. Bach},
 booktitle = {Advances in Neural Information Processing Systems 23},
@@ -148,7 +141,6 @@ editor = {J. D. Lafferty and C. K. I. Williams and J. Shawe-Taylor and R. S. Zem
 pages = {118--126},
 year = {2010},
 publisher = {Curran Associates, Inc.},
-url = {http://papers.nips.cc/paper/3933-structured-sparsity-inducing-norms-through-submodular-functions.pdf}
 }
 
 
@@ -163,3 +155,152 @@ url = {http://papers.nips.cc/paper/3933-structured-sparsity-inducing-norms-throu
  year = {1972}
 }
 
+
+
+@article{admm,
+ author = {Boyd, Stephen and Parikh, Neal and Chu, Eric and Peleato, Borja and Eckstein, Jonathan},
+ title = {Distributed Optimization and Statistical Learning via the Alternating Direction Method of Multipliers},
+ journal = {Found. Trends Mach. Learn.},
+ issue_date = {January 2011},
+ volume = {3},
+ number = {1},
+ month = jan,
+ year = {2011},
+ issn = {1935-8237},
+ pages = {1--122},
+ numpages = {122},
+ url = {http://dx.doi.org/10.1561/2200000016},
+ doi = {10.1561/2200000016},
+ acmid = {2185816},
+ publisher = {Now Publishers Inc.},
+ address = {Hanover, MA, USA},
+} 
+
+@book{fujishige2005submodular,
+  title={Submodular Functions and Optimization},
+  author={Fujishige, S.},
+  isbn={9780080461625},
+  series={Annals of Discrete Mathematics},
+  url={https://books.google.com/books?id=gdcRXdoV89QC},
+  year={2005},
+  publisher={Elsevier Science}
+}
+
+@Inbook{Lovasz1983,
+author="Lov{\'a}sz, L.",
+editor="Bachem, Achim
+and Korte, Bernhard
+and Gr{\"o}tschel, Martin",
+chapter="Submodular functions and convexity",
+title="Mathematical Programming The State of the Art: Bonn 1982",
+year="1983",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="235--257",
+isbn="978-3-642-68874-4",
+doi="10.1007/978-3-642-68874-4_10",
+url="http://dx.doi.org/10.1007/978-3-642-68874-4_10"
+}
+
+@book{boydcvx,
+ author = {Boyd, Stephen and Vandenberghe, Lieven},
+ title = {Convex Optimization},
+ year = {2004},
+ isbn = {0521833787},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+} 
+
+@article{su2016,
+author = "Su, Weijie and Cand{\`e}s, Emmanuel",
+doi = "10.1214/15-AOS1397",
+fjournal = "The Annals of Statistics",
+journal = "Ann. Statist.",
+month = "06",
+number = "3",
+pages = "1038--1068",
+publisher = "The Institute of Mathematical Statistics",
+title = "SLOPE is adaptive to unknown sparsity and asymptotically minimax",
+url = "http://dx.doi.org/10.1214/15-AOS1397",
+volume = "44",
+year = "2016"
+}
+
+@incollection{defazio2012,
+title = {A Convex Formulation for Learning Scale-Free Networks via Submodular Relaxation},
+author = {Defazio, Aaron and Tib\'{e}rio S. Caetano},
+booktitle = {Advances in Neural Information Processing Systems 25},
+editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
+pages = {1250--1258},
+year = {2012},
+publisher = {Curran Associates, Inc.},
+}
+
+@article{li2005,
+author = "Li, Lun and Alderson, David and Doyle, John C. and Willinger, Walter",
+fjournal = "Internet Mathematics",
+journal = "Internet Math.",
+number = "4",
+pages = "431--523",
+publisher = "A K Peters, Ltd.",
+title = "Towards a Theory of Scale-Free Graphs: Definition, Properties, and Implications",
+url = "http://projecteuclid.org/euclid.im/1150477667",
+volume = "2",
+year = "2005"
+}
+
+@article {Barabasi99,
+	author = {Barab{\'a}si, Albert-L{\'a}szl{\'o} and Albert, R{\'e}ka},
+	title = {Emergence of Scaling in Random Networks},
+	volume = {286},
+	number = {5439},
+	pages = {509--512},
+	year = {1999},
+	doi = {10.1126/science.286.5439.509},
+	publisher = {American Association for the Advancement of Science},
+	issn = {0036-8075},
+	journal = {Science}
+}
+
+@article{han2004evidence,
+  title={Evidence for dynamically organized modularity in the yeast protein--protein interaction network},
+  author={Han, Jing-Dong J and Bertin, Nicolas and Hao, Tong and Goldberg, Debra S and Berriz, Gabriel F and Zhang, Lan V and Dupuy, Denis and Walhout, Albertha JM and Cusick, Michael E and Roth, Frederick P and others},
+  journal={Nature},
+  volume={430},
+  number={6995},
+  pages={88--93},
+  year={2004},
+  publisher={Nature Publishing Group}
+}
+
+@article{barabasi2004network,
+  title={Network biology: understanding the cell's functional organization},
+  author={Barabasi, Albert-Laszlo and Oltvai, Zoltan N},
+  journal={Nature reviews genetics},
+  volume={5},
+  number={2},
+  pages={101--113},
+  year={2004},
+  publisher={Nature Publishing Group}
+}
+
+@article{de1965networks,
+  title={Networks of scientific papers},
+  author={de Solla Price, Derek J},
+  journal={Science},
+  volume={149},
+  number={3683},
+  pages={510--515},
+  year={1965},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{snijders2002markov,
+  title={Markov chain Monte Carlo estimation of exponential random graph models},
+  author={Snijders, Tom AB},
+  journal={Journal of Social Structure},
+  volume={3},
+  number={2},
+  pages={1--40},
+  year={2002}
+}
