updated paper, still need to clean up appendix formatting

--- a/paper/stat572.bib
+++ b/paper/stat572.bib
@@ -2,7 +2,7 @@
 
 @article{Yuan2007,
 author = {Yuan, Ming and Lin, Yi}, 
-title = {Model selection and estimation in the Gaussian graphical model},
+title = {Model selection and estimation in the {G}aussian graphical model},
 volume = {94}, 
 number = {1}, 
 pages = {19-35}, 
@@ -25,7 +25,7 @@ year = "2006"
 
 @article{Banerjee2008,
  author = {Banerjee, Onureena and El Ghaoui, Laurent and d'Aspremont, Alexandre},
- title = {Model Selection Through Sparse Maximum Likelihood Estimation for Multivariate Gaussian or Binary Data},
+ title = {Model Selection Through Sparse Maximum Likelihood Estimation for Multivariate {G}aussian or Binary Data},
  journal = {J. Mach. Learn. Res.},
  issue_date = {6/1/2008},
  volume = {9},
@@ -82,7 +82,7 @@ year = "2011"
 }
 
 @incollection{liu11c,
-   title = {Learning scale free networks by reweighted {L1} regularization},
+   title = {Learning scale free networks by reweighted {$l_1$} regularization},
    author = {Qiang Liu and Alexander Ihler},
    booktitle = {AI \& Statistics},
    month=apr,
@@ -125,6 +125,13 @@ year = "2011"
     volume = {5},
     pages = {1-12},
     number = {11},
+}
+
+@article{bogdan2013statistical,
+  title={Statistical estimation and testing via the sorted L1 norm},
+  author={Bogdan, Malgorzata and Berg, Ewout van den and Su, Weijie and Candes, Emmanuel},
+  journal={arXiv preprint arXiv:1310.1969},
+  year={2013}
 }
 
 @incollection{bach2010,
@@ -199,17 +206,15 @@ isbn="978-3-642-68874-4",
  address = {New York, NY, USA},
 } 
 
-@article{su2016,
-author = "Su, Weijie and Cand{\`e}s, Emmanuel",
-fjournal = "The Annals of Statistics",
-journal = "Ann. Statist.",
-month = "06",
-number = "3",
-pages = "1038--1068",
-publisher = "The Institute of Mathematical Statistics",
-title = "SLOPE is adaptive to unknown sparsity and asymptotically minimax",
-volume = "44",
-year = "2016"
+@article{bogdan2015slope,
+  title={SLOPE—adaptive variable selection via convex optimization},
+  author={Bogdan, Ma{\l}gorzata and van den Berg, Ewout and Sabatti, Chiara and Su, Weijie and Cand{\`e}s, Emmanuel J},
+  journal={The annals of applied statistics},
+  volume={9},
+  number={3},
+  pages={1103},
+  year={2015},
+  publisher={NIH Public Access}
 }
 
 @incollection{defazio2012,
